<?xml version="1.0"?>

<resources>

    <string name="app_name">GibWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="instructions">Add a city to keep track of</string>
    <string name="input_hint">City</string>
    <string name="button_text">Add City</string>
    <string name="AddCity">Please enter a city</string>
    <string name="dots">…</string>
    <string name="instructions2">Check the weather in:</string>
    <string name="Check">Check</string>
    <string name="city_not_found">The city was not found</string>
    <string name="enter_a_city">Please enter a city!</string>
    <string name="SevenDayCheck">Check Week</string>
    <string name="city_not_found_text">Could not find the given city</string>
    <string name="minus">-</string>
    <string name="ok">OK</string>
    <string name="hint_word">enter a city</string>
    <string name="save">save</string>
    <string name="empty_not_saved">no city given</string>
    <string name="settings">Settings</string>
    <string name="no_weather_found">NO WEATHER FOUND</string>
    <string name="FAHRENHEIT">°F</string>
    <string name="CELSIUS">°C</string>
    <string name="units">UNITS</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="select_lang">Select a language</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="dark_theme_string">Dark theme</string>
    <string name="language_changed">Language changed!</string>


    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>


    <string name="clear">clear</string>
    <string name="drizzle">drizzle</string>
    <string name="rain">rain</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="snow">snow</string>


    <string name="Today">Today</string>


    <string name="add_city">ADD CIty</string>

</resources>