
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

        <SwitchPreference
            android:defaultValue="true"
            android:key="notifications_key"
            android:title="@string/notifications" />

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="dark_theme_key"
            android:title="@string/dark_theme_string" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="temperature_key"
            android:summary="@string/fahrenheit"
            android:title="@string/celsius" />
        <ListPreference
            android:defaultValue="English"
            android:entries="@array/entries_array"
            android:entryValues="@array/entries_values_array"
            android:key="Lang_list_pref"
            android:summary="@string/select_lang"
            android:title="@string/language" />



        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
             dismiss it. -->
        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->



    </PreferenceScreen>

